RESOLVED AP-6610: Long labels are cut off in Quickform Slider https://knime-com.atlassian.net/browse/AP-6610
Forcing labels and tooltips to stay in one line

--- a/org.knime.js.quickforms/js-src/org/knime/js/base/node/quickform/filter/slider/slider.css
+++ b/org.knime.js.quickforms/js-src/org/knime/js/base/node/quickform/filter/slider/slider.css
@@ -22,6 +22,10 @@ html, body, div {
 	overflow: hidden;
 }
 
+.noUi-value, .noUi-tooltip {
+	white-space: nowrap;
+}
+
 .noUi-value-horizontal {
     -webkit-transform: translate3d(-50%,100%,0);
     transform: translate3d(-50%,100%,0);
