--- a/org.knime.js.quickforms/js-src/org/knime/js/base/node/quickform/input/slider/SliderInput.css
+++ b/org.knime.js.quickforms/js-src/org/knime/js/base/node/quickform/input/slider/SliderInput.css
@@ -3,6 +3,10 @@
 	overflow: hidden;
 }
 
+.noUi-value, .noUi-tooltip {
+	white-space: nowrap;
+}
+
 .noUi-value-horizontal {
     -webkit-transform: translate3d(-50%,100%,0);
     transform: translate3d(-50%,100%,0);
